# rustycv

./: .gitignore  Cargo.toml
examples/: draw_shapes.rs  image_displayer.rs  image_loader.rs
src/: draw_shapes.rs  image_displayer.rs  image_loader.rs  lib.rs
src/core/: base.rs  frame.rs  mat.rs  mod.rs
src/feature_detection/: feature_descriptor.rs
src/io/: image_displayer.rs  image_loader.rs  mod.rs
src/types/: base.rs  frame.rs  mod.rs
